--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -22,7 +22,7 @@
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.05);
+  /* background: rgba(0, 0, 0, 0.05); */
   border-radius: var(--scroll-width);
 }
 
