--- a/app/(routes)/tiptap.css
+++ b/app/(routes)/tiptap.css
@@ -39,7 +39,8 @@
 }
 .tiptap {
   outline: none;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 18px;
   transition: all 300ms ease-in-out;
   border-bottom: 2px solid transparent;
   height: 16rem;
@@ -89,7 +90,7 @@
 .tiptap h4,
 .tiptap h5,
 .tiptap h6 {
-  font-weight: bold;
+  font-weight: semibold;
 }
 .tiptap pre {
   background: #1e293b;
