--- a/app/(routes)/globals.css
+++ b/app/(routes)/globals.css
@@ -14,6 +14,10 @@
   clip-path: polygon(75% 0, 100% 21%, 100% 100%, 0 100%, 0 0);
 }
 
+.custom-class-for-zero-padding .ProseMirror {
+  padding: 0;
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: var(--scroll-width);
